# Churn-Prediction-ANN

./: .gitignore  MODEL_CARD.md  Makefile  PLANO-DE-TREINAMENTO.md  README.md  pyproject.toml
docs/: Tese-do-Projeto.md  architecture.md  data_description.md  ml_canvas.md  ml_flow_tracking.md  monitoring_plan.md  resultados_bateria.md
models/: config.json  mlp_deploy.pt  preprocessor_deploy.joblib
notebooks/: 01_eda.ipynb  02_data_prep.ipynb  03_baseline.ipynb  03_baseline.py  04_mlp.ipynb  05_rfm.ipynb  06_bias_analysis.ipynb
scripts/: _run_battery.py
src/churn/: __init__.py  config.py
src/churn/api/: main.py  middleware.py  schemas.py
src/churn/data/: loader.py  preprocessing.py
src/churn/models/: baseline.py  mlp.py
src/churn/training/: tracking.py  trainer.py
tests/: conftest.py  test_api.py  test_baseline.py  test_mlp.py  test_schema.py  test_smoke.py  test_tracking.py  test_trainer.py
