[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction"
version = "0.1.0"
description = "End-to-end churn prediction pipeline (PyTorch MLP + sklearn baselines + FastAPI) for FIAP MLET Tech Challenge 01."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Nycolas Garcia", email = "nycolasagrg.work@gmail.com" },
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "torch>=2.0",
    "mlflow>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
